// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavBarSearch NavBarSearch 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Box
            bg="blackBlue"
            p="x3"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <div
              className="Box-sc-1qu1edy-0 cgRXwI"
            >
              <Styled(BaseNavBarSearch)>
                <BaseNavBarSearch
                  className="sc-fzXfMz dMkYCt"
                  name="global-search"
                  onSubmit={[Function]}
                >
                  <form
                    className="sc-fzXfMz dMkYCt"
                    onSubmit={[Function]}
                  >
                    <Styled(Box)
                      role="search"
                      theme={
                        Object {
                          "borders": Array [],
                          "breakpoints": Object {
                            "extraLarge": "1920px",
                            "extraSmall": "0px",
                            "large": "1360px",
                            "medium": "1024px",
                            "small": "768px",
                          },
                          "colors": Object {
                            "black": "#011e38",
                            "blackBlue": "#122b47",
                            "blue": "#216beb",
                            "darkBlue": "#00438f",
                            "darkGrey": "#434d59",
                            "green": "#008059",
                            "grey": "#c0c8d1",
                            "lightBlue": "#e1ebfa",
                            "lightGreen": "#e9f7f2",
                            "lightGrey": "#e4e7eb",
                            "lightRed": "#fae6ea",
                            "lightYellow": "#fcf5e3",
                            "red": "#cc1439",
                            "white": "#ffffff",
                            "whiteGrey": "#f0f2f5",
                            "yellow": "#ffbb00",
                          },
                          "fontSizes": Object {
                            "large": "20px",
                            "larger": "26px",
                            "largest": "46px",
                            "medium": "16px",
                            "small": "14px",
                            "smaller": "12px",
                          },
                          "fontWeights": Object {
                            "bold": "600",
                            "light": "300",
                            "medium": "500",
                            "normal": "400",
                          },
                          "fonts": Object {
                            "base": "'IBM Plex Sans', sans-serif",
                            "mono": "'IBM Plex Mono', monospace",
                          },
                          "lineHeights": Object {
                            "base": "1.5",
                            "sectionTitle": "1.23076923",
                            "smallTextBase": "1.71428571",
                            "smallTextCompressed": "1.14285714",
                            "smallerText": "1.33333333",
                            "subsectionTitle": "1.2",
                            "title": "1.04347826",
                          },
                          "radii": Object {
                            "circle": "50%",
                            "medium": "4px",
                            "small": "2px",
                          },
                          "shadows": Object {
                            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                          },
                          "space": Object {
                            "half": "4px",
                            "none": "0px",
                            "x1": "8px",
                            "x2": "16px",
                            "x3": "24px",
                            "x4": "32px",
                            "x5": "40px",
                            "x6": "48px",
                            "x8": "64px",
                          },
                          "zIndex": Object {
                            "content": 100,
                            "overlay": 1000,
                            "tabsBar": 210,
                            "tabsScollIndicator": 200,
                          },
                        }
                      }
                    >
                      <div
                        className="Box-sc-1qu1edy-0 sc-AykKC hHVDfG"
                        role="search"
                      >
                        <ForwardRef
                          aria-labelledby="global-search"
                          disabled={false}
                          error={false}
                          errorList={null}
                          errorMessage={null}
                          helpText={null}
                          id="navbar-search"
                          labelText={null}
                          placeholder="Search Nulogy ..."
                          prefix={null}
                          prefixAlignment="left"
                          prefixWidth={null}
                          required={true}
                          requirementText={null}
                          suffix={null}
                          suffixAlignment="left"
                          suffixWidth={null}
                          type="search"
                        >
                          <Styled(Box)
                            theme={
                              Object {
                                "borders": Array [],
                                "breakpoints": Object {
                                  "extraLarge": "1920px",
                                  "extraSmall": "0px",
                                  "large": "1360px",
                                  "medium": "1024px",
                                  "small": "768px",
                                },
                                "colors": Object {
                                  "black": "#011e38",
                                  "blackBlue": "#122b47",
                                  "blue": "#216beb",
                                  "darkBlue": "#00438f",
                                  "darkGrey": "#434d59",
                                  "green": "#008059",
                                  "grey": "#c0c8d1",
                                  "lightBlue": "#e1ebfa",
                                  "lightGreen": "#e9f7f2",
                                  "lightGrey": "#e4e7eb",
                                  "lightRed": "#fae6ea",
                                  "lightYellow": "#fcf5e3",
                                  "red": "#cc1439",
                                  "white": "#ffffff",
                                  "whiteGrey": "#f0f2f5",
                                  "yellow": "#ffbb00",
                                },
                                "fontSizes": Object {
                                  "large": "20px",
                                  "larger": "26px",
                                  "largest": "46px",
                                  "medium": "16px",
                                  "small": "14px",
                                  "smaller": "12px",
                                },
                                "fontWeights": Object {
                                  "bold": "600",
                                  "light": "300",
                                  "medium": "500",
                                  "normal": "400",
                                },
                                "fonts": Object {
                                  "base": "'IBM Plex Sans', sans-serif",
                                  "mono": "'IBM Plex Mono', monospace",
                                },
                                "lineHeights": Object {
                                  "base": "1.5",
                                  "sectionTitle": "1.23076923",
                                  "smallTextBase": "1.71428571",
                                  "smallTextCompressed": "1.14285714",
                                  "smallerText": "1.33333333",
                                  "subsectionTitle": "1.2",
                                  "title": "1.04347826",
                                },
                                "radii": Object {
                                  "circle": "50%",
                                  "medium": "4px",
                                  "small": "2px",
                                },
                                "shadows": Object {
                                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                },
                                "space": Object {
                                  "half": "4px",
                                  "none": "0px",
                                  "x1": "8px",
                                  "x2": "16px",
                                  "x3": "24px",
                                  "x4": "32px",
                                  "x5": "40px",
                                  "x6": "48px",
                                  "x8": "64px",
                                },
                                "zIndex": Object {
                                  "content": 100,
                                  "overlay": 1000,
                                  "tabsBar": 210,
                                  "tabsScollIndicator": 200,
                                },
                              }
                            }
                          >
                            <div
                              className="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
                            >
                              <ForwardRef
                                aria-labelledby="global-search"
                                disabled={false}
                                error={false}
                                helpText={null}
                                id="navbar-search"
                                labelText={null}
                                placeholder="Search Nulogy ..."
                                prefix={null}
                                prefixAlignment="left"
                                prefixWidth={null}
                                required={true}
                                requirementText={null}
                                suffix={null}
                                suffixAlignment="left"
                                suffixWidth={null}
                                type="search"
                              >
                                <MaybeFieldLabel
                                  helpText={null}
                                  labelText={null}
                                  requirementText={null}
                                >
                                  <Styled(Box)
                                    alignItems="flex-start"
                                    theme={
                                      Object {
                                        "borders": Array [],
                                        "breakpoints": Object {
                                          "extraLarge": "1920px",
                                          "extraSmall": "0px",
                                          "large": "1360px",
                                          "medium": "1024px",
                                          "small": "768px",
                                        },
                                        "colors": Object {
                                          "black": "#011e38",
                                          "blackBlue": "#122b47",
                                          "blue": "#216beb",
                                          "darkBlue": "#00438f",
                                          "darkGrey": "#434d59",
                                          "green": "#008059",
                                          "grey": "#c0c8d1",
                                          "lightBlue": "#e1ebfa",
                                          "lightGreen": "#e9f7f2",
                                          "lightGrey": "#e4e7eb",
                                          "lightRed": "#fae6ea",
                                          "lightYellow": "#fcf5e3",
                                          "red": "#cc1439",
                                          "white": "#ffffff",
                                          "whiteGrey": "#f0f2f5",
                                          "yellow": "#ffbb00",
                                        },
                                        "fontSizes": Object {
                                          "large": "20px",
                                          "larger": "26px",
                                          "largest": "46px",
                                          "medium": "16px",
                                          "small": "14px",
                                          "smaller": "12px",
                                        },
                                        "fontWeights": Object {
                                          "bold": "600",
                                          "light": "300",
                                          "medium": "500",
                                          "normal": "400",
                                        },
                                        "fonts": Object {
                                          "base": "'IBM Plex Sans', sans-serif",
                                          "mono": "'IBM Plex Mono', monospace",
                                        },
                                        "lineHeights": Object {
                                          "base": "1.5",
                                          "sectionTitle": "1.23076923",
                                          "smallTextBase": "1.71428571",
                                          "smallTextCompressed": "1.14285714",
                                          "smallerText": "1.33333333",
                                          "subsectionTitle": "1.2",
                                          "title": "1.04347826",
                                        },
                                        "radii": Object {
                                          "circle": "50%",
                                          "medium": "4px",
                                          "small": "2px",
                                        },
                                        "shadows": Object {
                                          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                        },
                                        "space": Object {
                                          "half": "4px",
                                          "none": "0px",
                                          "x1": "8px",
                                          "x2": "16px",
                                          "x3": "24px",
                                          "x4": "32px",
                                          "x5": "40px",
                                          "x6": "48px",
                                          "x8": "64px",
                                        },
                                        "zIndex": Object {
                                          "content": 100,
                                          "overlay": 1000,
                                          "tabsBar": 210,
                                          "tabsScollIndicator": 200,
                                        },
                                      }
                                    }
                                  >
                                    <div
                                      className="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
                                    >
                                      <Prefix
                                        prefix={null}
                                        prefixWidth={null}
                                        textAlign="left"
                                      />
                                      <Box
                                        display="flex"
                                        flexGrow="1"
                                        position="relative"
                                        theme={
                                          Object {
                                            "borders": Array [],
                                            "breakpoints": Object {
                                              "extraLarge": "1920px",
                                              "extraSmall": "0px",
                                              "large": "1360px",
                                              "medium": "1024px",
                                              "small": "768px",
                                            },
                                            "colors": Object {
                                              "black": "#011e38",
                                              "blackBlue": "#122b47",
                                              "blue": "#216beb",
                                              "darkBlue": "#00438f",
                                              "darkGrey": "#434d59",
                                              "green": "#008059",
                                              "grey": "#c0c8d1",
                                              "lightBlue": "#e1ebfa",
                                              "lightGreen": "#e9f7f2",
                                              "lightGrey": "#e4e7eb",
                                              "lightRed": "#fae6ea",
                                              "lightYellow": "#fcf5e3",
                                              "red": "#cc1439",
                                              "white": "#ffffff",
                                              "whiteGrey": "#f0f2f5",
                                              "yellow": "#ffbb00",
                                            },
                                            "fontSizes": Object {
                                              "large": "20px",
                                              "larger": "26px",
                                              "largest": "46px",
                                              "medium": "16px",
                                              "small": "14px",
                                              "smaller": "12px",
                                            },
                                            "fontWeights": Object {
                                              "bold": "600",
                                              "light": "300",
                                              "medium": "500",
                                              "normal": "400",
                                            },
                                            "fonts": Object {
                                              "base": "'IBM Plex Sans', sans-serif",
                                              "mono": "'IBM Plex Mono', monospace",
                                            },
                                            "lineHeights": Object {
                                              "base": "1.5",
                                              "sectionTitle": "1.23076923",
                                              "smallTextBase": "1.71428571",
                                              "smallTextCompressed": "1.14285714",
                                              "smallerText": "1.33333333",
                                              "subsectionTitle": "1.2",
                                              "title": "1.04347826",
                                            },
                                            "radii": Object {
                                              "circle": "50%",
                                              "medium": "4px",
                                              "small": "2px",
                                            },
                                            "shadows": Object {
                                              "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                              "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                              "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                              "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                              "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                            },
                                            "space": Object {
                                              "half": "4px",
                                              "none": "0px",
                                              "x1": "8px",
                                              "x2": "16px",
                                              "x3": "24px",
                                              "x4": "32px",
                                              "x5": "40px",
                                              "x6": "48px",
                                              "x8": "64px",
                                            },
                                            "zIndex": Object {
                                              "content": 100,
                                              "overlay": 1000,
                                              "tabsBar": 210,
                                              "tabsScollIndicator": 200,
                                            },
                                          }
                                        }
                                      >
                                        <div
                                          className="Box-sc-1qu1edy-0 klanzh"
                                          display="flex"
                                        >
                                          <InputField__StyledInput
                                            aria-invalid={false}
                                            aria-labelledby="global-search"
                                            aria-required={true}
                                            disabled={false}
                                            error={false}
                                            id="navbar-search"
                                            placeholder="Search Nulogy ..."
                                            required={true}
                                            type="search"
                                          >
                                            <input
                                              aria-invalid={false}
                                              aria-labelledby="global-search"
                                              aria-required={true}
                                              className="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                                              disabled={false}
                                              id="navbar-search"
                                              placeholder="Search Nulogy ..."
                                              required={true}
                                              type="search"
                                            />
                                          </InputField__StyledInput>
                                        </div>
                                      </Box>
                                      <Suffix
                                        suffix={null}
                                        suffixWidth={null}
                                        textAlign="left"
                                      />
                                    </div>
                                  </Styled(Box)>
                                </MaybeFieldLabel>
                              </ForwardRef>
                              <InlineValidation
                                errorList={null}
                                errorMessage={null}
                                mt="x1"
                              />
                            </div>
                          </Styled(Box)>
                        </ForwardRef>
                        <button
                          aria-label="global-search"
                          id="global-search"
                        >
                          <Styled(Component)
                            color="currentColor"
                            icon="search"
                            size="24px"
                            title={null}
                          >
                            <ForwardRef
                              className="sc-AykKD bZVMDg"
                              color="currentColor"
                              focusable={false}
                              icon="search"
                              size="24px"
                              title={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="sc-AykKD bZVMDg"
                                color="currentColor"
                                fill="currentColor"
                                focusable={false}
                                height="24px"
                                icon="search"
                                size="24px"
                                title={null}
                                viewBox="0 0 24 24"
                                width="24px"
                              >
                                <path
                                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  key="0"
                                />
                              </svg>
                            </ForwardRef>
                          </Styled(Component)>
                        </button>
                      </div>
                    </Styled(Box)>
                  </form>
                </BaseNavBarSearch>
              </Styled(BaseNavBarSearch)>
            </div>
          </Box>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots NavBarSearch With custom name 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Box
            bg="blackBlue"
            p="x3"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <div
              className="Box-sc-1qu1edy-0 cgRXwI"
            >
              <Styled(BaseNavBarSearch)
                name="global-search-2"
              >
                <BaseNavBarSearch
                  className="sc-fzXfMz dMkYCt"
                  name="global-search-2"
                  onSubmit={[Function]}
                >
                  <form
                    className="sc-fzXfMz dMkYCt"
                    onSubmit={[Function]}
                  >
                    <Styled(Box)
                      role="search"
                      theme={
                        Object {
                          "borders": Array [],
                          "breakpoints": Object {
                            "extraLarge": "1920px",
                            "extraSmall": "0px",
                            "large": "1360px",
                            "medium": "1024px",
                            "small": "768px",
                          },
                          "colors": Object {
                            "black": "#011e38",
                            "blackBlue": "#122b47",
                            "blue": "#216beb",
                            "darkBlue": "#00438f",
                            "darkGrey": "#434d59",
                            "green": "#008059",
                            "grey": "#c0c8d1",
                            "lightBlue": "#e1ebfa",
                            "lightGreen": "#e9f7f2",
                            "lightGrey": "#e4e7eb",
                            "lightRed": "#fae6ea",
                            "lightYellow": "#fcf5e3",
                            "red": "#cc1439",
                            "white": "#ffffff",
                            "whiteGrey": "#f0f2f5",
                            "yellow": "#ffbb00",
                          },
                          "fontSizes": Object {
                            "large": "20px",
                            "larger": "26px",
                            "largest": "46px",
                            "medium": "16px",
                            "small": "14px",
                            "smaller": "12px",
                          },
                          "fontWeights": Object {
                            "bold": "600",
                            "light": "300",
                            "medium": "500",
                            "normal": "400",
                          },
                          "fonts": Object {
                            "base": "'IBM Plex Sans', sans-serif",
                            "mono": "'IBM Plex Mono', monospace",
                          },
                          "lineHeights": Object {
                            "base": "1.5",
                            "sectionTitle": "1.23076923",
                            "smallTextBase": "1.71428571",
                            "smallTextCompressed": "1.14285714",
                            "smallerText": "1.33333333",
                            "subsectionTitle": "1.2",
                            "title": "1.04347826",
                          },
                          "radii": Object {
                            "circle": "50%",
                            "medium": "4px",
                            "small": "2px",
                          },
                          "shadows": Object {
                            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                          },
                          "space": Object {
                            "half": "4px",
                            "none": "0px",
                            "x1": "8px",
                            "x2": "16px",
                            "x3": "24px",
                            "x4": "32px",
                            "x5": "40px",
                            "x6": "48px",
                            "x8": "64px",
                          },
                          "zIndex": Object {
                            "content": 100,
                            "overlay": 1000,
                            "tabsBar": 210,
                            "tabsScollIndicator": 200,
                          },
                        }
                      }
                    >
                      <div
                        className="Box-sc-1qu1edy-0 sc-AykKC hHVDfG"
                        role="search"
                      >
                        <ForwardRef
                          aria-labelledby="global-search-2"
                          disabled={false}
                          error={false}
                          errorList={null}
                          errorMessage={null}
                          helpText={null}
                          id="navbar-search"
                          labelText={null}
                          placeholder="Search Nulogy ..."
                          prefix={null}
                          prefixAlignment="left"
                          prefixWidth={null}
                          required={true}
                          requirementText={null}
                          suffix={null}
                          suffixAlignment="left"
                          suffixWidth={null}
                          type="search"
                        >
                          <Styled(Box)
                            theme={
                              Object {
                                "borders": Array [],
                                "breakpoints": Object {
                                  "extraLarge": "1920px",
                                  "extraSmall": "0px",
                                  "large": "1360px",
                                  "medium": "1024px",
                                  "small": "768px",
                                },
                                "colors": Object {
                                  "black": "#011e38",
                                  "blackBlue": "#122b47",
                                  "blue": "#216beb",
                                  "darkBlue": "#00438f",
                                  "darkGrey": "#434d59",
                                  "green": "#008059",
                                  "grey": "#c0c8d1",
                                  "lightBlue": "#e1ebfa",
                                  "lightGreen": "#e9f7f2",
                                  "lightGrey": "#e4e7eb",
                                  "lightRed": "#fae6ea",
                                  "lightYellow": "#fcf5e3",
                                  "red": "#cc1439",
                                  "white": "#ffffff",
                                  "whiteGrey": "#f0f2f5",
                                  "yellow": "#ffbb00",
                                },
                                "fontSizes": Object {
                                  "large": "20px",
                                  "larger": "26px",
                                  "largest": "46px",
                                  "medium": "16px",
                                  "small": "14px",
                                  "smaller": "12px",
                                },
                                "fontWeights": Object {
                                  "bold": "600",
                                  "light": "300",
                                  "medium": "500",
                                  "normal": "400",
                                },
                                "fonts": Object {
                                  "base": "'IBM Plex Sans', sans-serif",
                                  "mono": "'IBM Plex Mono', monospace",
                                },
                                "lineHeights": Object {
                                  "base": "1.5",
                                  "sectionTitle": "1.23076923",
                                  "smallTextBase": "1.71428571",
                                  "smallTextCompressed": "1.14285714",
                                  "smallerText": "1.33333333",
                                  "subsectionTitle": "1.2",
                                  "title": "1.04347826",
                                },
                                "radii": Object {
                                  "circle": "50%",
                                  "medium": "4px",
                                  "small": "2px",
                                },
                                "shadows": Object {
                                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                },
                                "space": Object {
                                  "half": "4px",
                                  "none": "0px",
                                  "x1": "8px",
                                  "x2": "16px",
                                  "x3": "24px",
                                  "x4": "32px",
                                  "x5": "40px",
                                  "x6": "48px",
                                  "x8": "64px",
                                },
                                "zIndex": Object {
                                  "content": 100,
                                  "overlay": 1000,
                                  "tabsBar": 210,
                                  "tabsScollIndicator": 200,
                                },
                              }
                            }
                          >
                            <div
                              className="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
                            >
                              <ForwardRef
                                aria-labelledby="global-search-2"
                                disabled={false}
                                error={false}
                                helpText={null}
                                id="navbar-search"
                                labelText={null}
                                placeholder="Search Nulogy ..."
                                prefix={null}
                                prefixAlignment="left"
                                prefixWidth={null}
                                required={true}
                                requirementText={null}
                                suffix={null}
                                suffixAlignment="left"
                                suffixWidth={null}
                                type="search"
                              >
                                <MaybeFieldLabel
                                  helpText={null}
                                  labelText={null}
                                  requirementText={null}
                                >
                                  <Styled(Box)
                                    alignItems="flex-start"
                                    theme={
                                      Object {
                                        "borders": Array [],
                                        "breakpoints": Object {
                                          "extraLarge": "1920px",
                                          "extraSmall": "0px",
                                          "large": "1360px",
                                          "medium": "1024px",
                                          "small": "768px",
                                        },
                                        "colors": Object {
                                          "black": "#011e38",
                                          "blackBlue": "#122b47",
                                          "blue": "#216beb",
                                          "darkBlue": "#00438f",
                                          "darkGrey": "#434d59",
                                          "green": "#008059",
                                          "grey": "#c0c8d1",
                                          "lightBlue": "#e1ebfa",
                                          "lightGreen": "#e9f7f2",
                                          "lightGrey": "#e4e7eb",
                                          "lightRed": "#fae6ea",
                                          "lightYellow": "#fcf5e3",
                                          "red": "#cc1439",
                                          "white": "#ffffff",
                                          "whiteGrey": "#f0f2f5",
                                          "yellow": "#ffbb00",
                                        },
                                        "fontSizes": Object {
                                          "large": "20px",
                                          "larger": "26px",
                                          "largest": "46px",
                                          "medium": "16px",
                                          "small": "14px",
                                          "smaller": "12px",
                                        },
                                        "fontWeights": Object {
                                          "bold": "600",
                                          "light": "300",
                                          "medium": "500",
                                          "normal": "400",
                                        },
                                        "fonts": Object {
                                          "base": "'IBM Plex Sans', sans-serif",
                                          "mono": "'IBM Plex Mono', monospace",
                                        },
                                        "lineHeights": Object {
                                          "base": "1.5",
                                          "sectionTitle": "1.23076923",
                                          "smallTextBase": "1.71428571",
                                          "smallTextCompressed": "1.14285714",
                                          "smallerText": "1.33333333",
                                          "subsectionTitle": "1.2",
                                          "title": "1.04347826",
                                        },
                                        "radii": Object {
                                          "circle": "50%",
                                          "medium": "4px",
                                          "small": "2px",
                                        },
                                        "shadows": Object {
                                          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                        },
                                        "space": Object {
                                          "half": "4px",
                                          "none": "0px",
                                          "x1": "8px",
                                          "x2": "16px",
                                          "x3": "24px",
                                          "x4": "32px",
                                          "x5": "40px",
                                          "x6": "48px",
                                          "x8": "64px",
                                        },
                                        "zIndex": Object {
                                          "content": 100,
                                          "overlay": 1000,
                                          "tabsBar": 210,
                                          "tabsScollIndicator": 200,
                                        },
                                      }
                                    }
                                  >
                                    <div
                                      className="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
                                    >
                                      <Prefix
                                        prefix={null}
                                        prefixWidth={null}
                                        textAlign="left"
                                      />
                                      <Box
                                        display="flex"
                                        flexGrow="1"
                                        position="relative"
                                        theme={
                                          Object {
                                            "borders": Array [],
                                            "breakpoints": Object {
                                              "extraLarge": "1920px",
                                              "extraSmall": "0px",
                                              "large": "1360px",
                                              "medium": "1024px",
                                              "small": "768px",
                                            },
                                            "colors": Object {
                                              "black": "#011e38",
                                              "blackBlue": "#122b47",
                                              "blue": "#216beb",
                                              "darkBlue": "#00438f",
                                              "darkGrey": "#434d59",
                                              "green": "#008059",
                                              "grey": "#c0c8d1",
                                              "lightBlue": "#e1ebfa",
                                              "lightGreen": "#e9f7f2",
                                              "lightGrey": "#e4e7eb",
                                              "lightRed": "#fae6ea",
                                              "lightYellow": "#fcf5e3",
                                              "red": "#cc1439",
                                              "white": "#ffffff",
                                              "whiteGrey": "#f0f2f5",
                                              "yellow": "#ffbb00",
                                            },
                                            "fontSizes": Object {
                                              "large": "20px",
                                              "larger": "26px",
                                              "largest": "46px",
                                              "medium": "16px",
                                              "small": "14px",
                                              "smaller": "12px",
                                            },
                                            "fontWeights": Object {
                                              "bold": "600",
                                              "light": "300",
                                              "medium": "500",
                                              "normal": "400",
                                            },
                                            "fonts": Object {
                                              "base": "'IBM Plex Sans', sans-serif",
                                              "mono": "'IBM Plex Mono', monospace",
                                            },
                                            "lineHeights": Object {
                                              "base": "1.5",
                                              "sectionTitle": "1.23076923",
                                              "smallTextBase": "1.71428571",
                                              "smallTextCompressed": "1.14285714",
                                              "smallerText": "1.33333333",
                                              "subsectionTitle": "1.2",
                                              "title": "1.04347826",
                                            },
                                            "radii": Object {
                                              "circle": "50%",
                                              "medium": "4px",
                                              "small": "2px",
                                            },
                                            "shadows": Object {
                                              "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                                              "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                                              "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                                              "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                                              "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                                            },
                                            "space": Object {
                                              "half": "4px",
                                              "none": "0px",
                                              "x1": "8px",
                                              "x2": "16px",
                                              "x3": "24px",
                                              "x4": "32px",
                                              "x5": "40px",
                                              "x6": "48px",
                                              "x8": "64px",
                                            },
                                            "zIndex": Object {
                                              "content": 100,
                                              "overlay": 1000,
                                              "tabsBar": 210,
                                              "tabsScollIndicator": 200,
                                            },
                                          }
                                        }
                                      >
                                        <div
                                          className="Box-sc-1qu1edy-0 klanzh"
                                          display="flex"
                                        >
                                          <InputField__StyledInput
                                            aria-invalid={false}
                                            aria-labelledby="global-search-2"
                                            aria-required={true}
                                            disabled={false}
                                            error={false}
                                            id="navbar-search"
                                            placeholder="Search Nulogy ..."
                                            required={true}
                                            type="search"
                                          >
                                            <input
                                              aria-invalid={false}
                                              aria-labelledby="global-search-2"
                                              aria-required={true}
                                              className="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                                              disabled={false}
                                              id="navbar-search"
                                              placeholder="Search Nulogy ..."
                                              required={true}
                                              type="search"
                                            />
                                          </InputField__StyledInput>
                                        </div>
                                      </Box>
                                      <Suffix
                                        suffix={null}
                                        suffixWidth={null}
                                        textAlign="left"
                                      />
                                    </div>
                                  </Styled(Box)>
                                </MaybeFieldLabel>
                              </ForwardRef>
                              <InlineValidation
                                errorList={null}
                                errorMessage={null}
                                mt="x1"
                              />
                            </div>
                          </Styled(Box)>
                        </ForwardRef>
                        <button
                          aria-label="global-search-2"
                          id="global-search-2"
                        >
                          <Styled(Component)
                            color="currentColor"
                            icon="search"
                            size="24px"
                            title={null}
                          >
                            <ForwardRef
                              className="sc-AykKD bZVMDg"
                              color="currentColor"
                              focusable={false}
                              icon="search"
                              size="24px"
                              title={null}
                            >
                              <svg
                                aria-hidden={true}
                                className="sc-AykKD bZVMDg"
                                color="currentColor"
                                fill="currentColor"
                                focusable={false}
                                height="24px"
                                icon="search"
                                size="24px"
                                title={null}
                                viewBox="0 0 24 24"
                                width="24px"
                              >
                                <path
                                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  key="0"
                                />
                              </svg>
                            </ForwardRef>
                          </Styled(Component)>
                        </button>
                      </div>
                    </Styled(Box)>
                  </form>
                </BaseNavBarSearch>
              </Styled(BaseNavBarSearch)>
            </div>
          </Box>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
